# ArionVoicer_Skillet

./: Dockerfile  LICENSE  README.md  main_skilletz.py  pyproject.toml
models/: br_names.txt  it_names.txt  us_names.txt
