[build-system]
requires = ["uv<0.6"]
build-backend = "uv"
UV_PREVIEW=1

[project]
name = "ArionVoicer"
version = "0.1.0"
description = "ArionVoicer Advanced Speech recognition"
authors = [
    { name = "Aislan", email = "diego@arionkoder.com" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "streamlit",
    "sounddevice",
    "boto3",
    "fuzzywuzzy",
    "python-Levenshtein",  # Required by fuzzywuzzy for better performance
    "vosk @ https://github.com/alphacep/vosk-api/releases/download/v0.3.42/vosk-0.3.42-py3-none-macosx_10_6_universal2.whl",
]

[tool.uv]
preview = true